# anchor-litesvm-examples

./: Anchor.toml  README.md
programs/counter/: Cargo.toml
programs/counter/src/: lib.rs
programs/counter/tests/: integration.rs  utils.rs
programs/logs/: Cargo.toml
programs/logs/src/: lib.rs
programs/logs/tests/: integration.rs  utils.rs
tests/: logs.ts
